--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 header {
     background-color: #000; /* Черный фон */
     color: #fff;
-    padding: 10px ;
+    /* padding: 10px ; */
     position: fixed;
     top: 0;
     width: 100%;
