--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 header {
-    background-color: red; /* Черный фон */
+    background-color: #000; /* Черный фон */
     color: #fff;
     /* padding: 10px ; */
     position: fixed;
