--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,107 @@
 header {
-    background-color: #000; /* Черный фон */
-    color: #fff;
-    /* padding: 10px ; */
-    position: fixed;
-    top: 0;
-    left: 0;
-    text-align: center; 
-    box-sizing: border-box;
-    width: 100%;
-    z-index: 1000; /* Убедитесь, что панель поверх всего */
+  background-color: #000; /* Черный фон */
+  color: #fff;
+  /* padding: 10px ; */
+  position: fixed;
+  top: 0;
+  left: 0;
+  text-align: center;
+  box-sizing: border-box;
+  width: 100%;
+  z-index: 1000; /* Убедитесь, что панель поверх всего */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.menu-icon,
+.search-icon {
+  cursor: pointer;
+  font-size: 24px;
+}
+nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 250px; /* Ширина меню */
+  height: 100%;
+  background-color: #333; /* Цвет фона меню */
+  overflow: auto;
+  transform: translateX(-100%); /* Скрываем меню за пределами экрана */
+  transition: transform 0.3s ease;
+  z-index: 999; /* Убедитесь, что меню над контентом */
+  margin-top: 80px;
+}
+nav ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+nav ul li {
+  margin: 0;
+  padding: 10px 20px;
+  color: #fff;
+  /* background-color: #333; */
+  /* background-color: green;
+  border: 1px solid red; */
+}
+
+nav ul li a {
+  color: #fff;
+  text-decoration: none;
+  display: block;
+}
+nav.show {
+  transform: translateX(0);
+}
+.close-menu {
+  color: #fff;
+  font-size: 30px;
+  cursor: pointer;
+  padding: 10px;
+  text-align: left;
+}
+#search {
+  position: fixed;
+  top: 50px;
+  right: 10px;
+  background-color: #fff;
+  padding: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  transition: transform 0.3s ease;
+  transform: translateX(100%);
+}
+#search.show {
+  transform: translateX(0);
+}
+.show {
+  display: block;
+}
+#search input[type="text"] {
+  padding: 5px;
+  font-size: 16px;
+}
+
+#search button {
+  padding: 5px 10px;
+  font-size: 16px;
+  cursor: pointer;
+}
+.hidden {
+  display: none;
+  /* transform: translateX(-100%); Меню скрыто */
+}
+.highlight {
+  background-color: yellow;
+}
+
+.header h1 {
+  margin: 0;
+  font-size: 24px;
+  text-align: center;
+  flex-grow: 1;
 }
