--- a/styles.css
+++ b/styles.css
@@ -1,36 +1,64 @@
 header {
   background-color: #000; /* Черный фон */
   color: #fff;
-  /* padding: 10px ; */
+  padding: 10px;
   position: fixed;
+  /* position: relative; */
+  display: flex;
+  flex-direction: column;
   top: 0;
   left: 0;
   text-align: center;
   box-sizing: border-box;
   width: 100%;
   z-index: 1000; /* Убедитесь, что панель поверх всего */
-  display: flex;
+  /* display: flex; */
   align-items: center;
   /* justify-content: center; */
   justify-content: space-between;
 }
-.header-content {
-  flex-grow: 1; /* Заполнение оставшегося пространства */
+/* .header-content {
+  flex-grow: 1; /* Заполнение оставшегося пространства
   display: flex;
-  justify-content: center; /* Центрирование содержимого */
+  justify-content: center; /* Центрирование содержимого
   align-items: center;
   margin-bottom: 20px;
+} */
+.header-content {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  width: 100%;
 }
-.header-content h3 {
+.header-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+.header-row h3 {
   margin: 0;
-  /* font-size: 14px; */
   font: medium Calibri;
+  margin-bottom: 10px;
 }
+.header-second-row h3 {
+  margin: 0;
+  /* text-align: center; */
+  font: medium Calibri;
+  /* margin-bottom: 20px; */
+}
+/* .header-content h3 {
+  margin: 0;
+  font: medium Calibri;
+} */
 .menu-icon,
 .search-icon {
+  position: absolute;
+  left: 10px;
+  top: 10px;
   cursor: pointer;
   font-size: 16px; /* Или medium */
-  flex-shrink: 0; /* Предотвращение сжатия иконки меню */
+  /* flex-shrink: 0;  Предотвращение сжатия иконки меню */
 }
 nav {
   position: fixed;
