--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,3 @@
-
- body, html {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-}
 header {
   background-color: #000; /* Черный фон */
   color: #fff;
@@ -89,6 +83,7 @@ nav ul li {
   margin: 0;
   padding: 10px 20px;
   color: #fff;
+  font: medium Calibri;
   /* background-color: #333; */
   /* background-color: green;
   border: 1px solid red; */
