--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body,
 html {
   font: medium Calibri;
 }
-.publication {
+.main {
   border: 1px solid black;
   padding: 10px;
   padding-top: 20px;
