--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ header {
 }
 .header-second-row h3 {
   margin: 0;
-  font: medium Calibri;
+  font: x-large Calibri;
 }
 .btns {
   display: none;
