--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ html {
   padding: 10px;
   padding-top: 20px;
   box-sizing: border-box;
-  margin-top: 80px;
+  margin-top: 120px;
 }
 header {
   background-color: #000; /* Черный фон */
@@ -34,11 +34,7 @@ header {
 }
 .header-row {
   display: flex;
-  /* justify-content: left;
-  margin-left: 30px; */
-  /* align-items: center; */
   width: 100%;
-  /* font: medium Calibri; */
 }
 .header-row h3 {
   margin: 0;
@@ -80,7 +76,7 @@ header {
 .search-icon {
   position: absolute;
   left: 10px;
-  top: 7px;
+  top: 8px;
   cursor: pointer;
   font-size: 18px; /* Или medium */
 }
@@ -95,7 +91,7 @@ nav {
   transform: translateX(-100%); /* Скрываем меню за пределами экрана */
   transition: transform 0.3s ease;
   z-index: 999; /* Убедитесь, что меню над контентом */
-  margin-top: 66px;
+  margin-top: 100px;
 }
 nav ul {
   list-style-type: none;
@@ -105,9 +101,9 @@ nav ul {
 
 nav ul li {
   margin: 0;
-  padding: 10px 20px;
+  padding: 5px;
   color: #fff;
-  font: medium Quicksand;
+  font: medium;
   /* background-color: #333; */
   /* background-color: green;
   border: 1px solid red; */
